--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,9 @@ permalink: /contact/
 tags: contact
 ---
 
-<div class="py2">
+Write to mgkrishnanblog@gmail.com
+
+<!-- div class="py2">
   {% if site.ajaxify_contact_form %}
     <form class="form-stacked">
       <input type="text" name="email" class="field-light" placeholder="{{ site.text.contact.email }}">
@@ -23,8 +25,9 @@ tags: contact
       <input type="submit" class="button button-blue button-big mobile-block" value="{{ site.text.contact.submit }}">
     </form>
   {% endif %}
-</div>
-
+</div -->
+<!--
 {% if site.ajaxify_contact_form %}
   {% include ajaxify_content_form.html %}
 {% endif %}
+-->
